

public class PizzaGrecqueStyleBrest extends Pizza{
	
}
