

public class PizzaPoivronStyleBrest extends Pizza{

}
