@startuml

title __JAVA's Class Diagram__\n


    abstract class Pizza {
        # garnitures : ArrayList<String>
        # name : String
        # pasta : String
        # sauce : String
        + Pizza()
        + couper()
        + cuire()
        + emballer()
        + getNom()
        + preparer()
    }

  

    abstract class PizzaFactory {
        + creerPizza()
    }

  


    class PizzaFactoryBrest {
        {static} - instance : PizzaFactoryBrest
        + creerPizza()
        {static} + getInstance()
        - PizzaFactoryBrest()
    }

  


    class PizzaFactoryStrasbourg {
        {static} - instance : PizzaFactoryStrasbourg
        + creerPizza()
        {static} + getInstance()
        - PizzaFactoryStrasbourg()
    }

  


    class PizzaFromageStyleBrest {
        + PizzaFromageStyleBrest()
        + couper()
        + cuire()
        + emballer()
        + getNom()
        + preparer()

  }
  

    class PizzaFromageStyleStrasbourg {
        + PizzaFromageStyleStrasbourg()
        + couper()
        + cuire()
        + emballer()
        + getNom()
        + preparer()
    }

  


    class PizzaGrecqueStyleBrest {
    }

  


    class PizzaGrecqueStyleStrasbourg {
    }

  


    class PizzaPoivronStyleBrest {

  }
  

    class PizzaPoivronStyleStrasbourg {
    }

  


    class PizzaTestDrive {
        {static} + main()

  }
  


    abstract class Pizzeria {
        + Pizzeria()
        + commanderPizza()
        {abstract} # creerPizza()

  }
  


    class PizzeriaBrest {
        + PizzeriaBrest()
        # creerPizza()

  }
  


    class PizzeriaFactory {
        {static} - instance : PizzeriaFactory
        + creerPizzeria()
        {static} + getInstance()
        - PizzeriaFactory()

  }
  


    class PizzeriaStrasbourg {
        + PizzeriaStrasbourg()
        # creerPizza()

  }
  

    Pizza <|-- PizzaFromageStyleBrest
      Pizza <|-- PizzaFromageStyleStrasboug
      Pizza <|-- PizzaGrecque
      Pizza <|-- PizzaPoivrons
      Pizzeria --> "1" PizzaFactory : pizzaFactory
      Pizzeria <|-- PizzeriaBrest
      Pizzeria <|-- PizzeriaStrasbourg
      PizzaFactory <|-- PizzaFactoryBrest
      PizzaFactory <|-- PizzaFactoryStrasbourg
      Pizzeria <.. PizzeriaFactory
      PizzeriaFactory <.. PizzaTestDrive
      Pizza <.. PizzaTestDrive
      Pizza <.. PizzaFactory
      Pizza <.. Pizzeria


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
